ags (1.2.0)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* TODO:JK: implemented ags-capture recall
	* TODO:JK: implemented AgsWaverec
	* TODO:JK: implemented audio input properties
	* TODO:JK: implemented AgsWaveWindow, AgsWaveEditor, AgsWaveToolbar and AgsWaveEdit
	* TODO:JK: implemented AgsSelectAudioData and AgsPositionWaveCursor
	* TODO:JK: implemented AgsLevel
	* TODO:JK: implemented AgsPiano
	* TODO:JK: implemented AgsNotationEdit
	* TODO:JK: refactored AgsEditor
	* TODO:JK: replaced AgsNoteEdit and AgsPatternEdit by AgsNotationEdit
	* TODO:JK: refactored AgsAutomationEditor to be more light-weight
	* implemented AgsDevin
	* implemented AgsJackDevin
	* implemented AgsPulseDevin
	* extended AgsJackServer and AgsJackClient to support AgsJackDevin
	* extended AgsPulseServer, AgsPulseClient and AgsPulsePort to support AgsPulseDevin
	* extended AgsSwitchBufferFlag and AgsClearBuffer to support AgsDevin, AgsJackDevin and AgsPulseDevin
	* use $(docdir) in Makefile.am

ags (1.1.5)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* added support for ALSA default device
	* modified functional tests to use default device
	* modified ags_devout.c to apply device identifier fixup
	* minor bug-fixes

ags (1.1.4)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed ags_synth_generator_compute_extended() to deal with x <= 0.0 using floor()
	* fixed if-statements in ags_synth_generator_compute_extended() not to do array index excess

ags (1.1.3)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed ags_synth_generator_compute_extended() to deal with x <= 0.0

ags (1.1.2)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed ags_cancel_audio_new() to use properties
	* fixed ags_set_samplerate_new() to use properties

ags (1.1.1)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed SIGSEGV in ags_synth_generator_compute_extended() because NULL pointer dereference