@@ -1,5 +1,5 @@
 /* GSequencer - Advanced GTK Sequencer
- * Copyright (C) 2005-2015 Joël Krähemann
+ * Copyright (C) 2005-2017 Joël Krähemann
  *
  * This file is part of GSequencer.
  *
@@ -22,7 +22,9 @@
 
 #include <glib.h>
 #include <glib-object.h>
+
 #include <pango/pango.h>
+
 #include <gtk/gtk.h>
 
 #include <ags/X/ags_machine.h>
